# BTC-Lottery-Pet

./: .gitignore  CHANGELOG.md  DEVELOPMENT_FILES.md  GPU_VALIDATION.md  README.md  RELEASE_CHECKLIST.md  config.json  index.html  package-lock.json  package.json  tsconfig.frontend-test.json
.github/workflows/: ci.yml
scripts/: clean-dev.ps1  dev-env.ps1  tooling.ps1  verify.ps1
src/: App.tsx  formatting.ts  miningLogic.ts  notificationSettings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu_miner.rs  lib.rs  main.rs  miner.rs  notifications.rs  sha256_mining.cl  sha256_mining.wgsl
src/components/: Header.tsx  LogTicker.tsx  MetricsGrid.tsx  PetDisplay.tsx  SettingsPanel.tsx
src/domain/: jackpotSequence.ts  miningEvents.ts  miningLogs.ts  miningMode.ts  petState.ts  probabilityEngine.ts
src/engines/: miningEngine.ts
src/hooks/: useBlockHeight.ts  useDiagnosticsActions.ts  useHeartbeatNotifications.ts  useSimulationMiningSession.ts
src/pets/: companion.ts  profiles.ts
test/: miningLogic.test.mjs
