[package]
name = "btc-lottery-pet"
version = "0.7.0"
description = "An opt-in BTC lottery miner and simulation desktop pet"
authors = ["BTC Lottery Pet"]
edition = "2021"

[lib]
name = "btc_lottery_pet_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
bitcoin = "0.32"
chrono = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
wgpu = { version = "24", features = ["wgsl"] }
pollster = "0.4"
opencl3 = "0.12"
ureq = { version = "2.9", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5"
